routing-2/deployment-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: istio-explorations
  name: routing-deployment-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: route-pod
      version: v2
  template:
    metadata:
      labels:
        app: route-pod
        version: v2
    spec:
      containers:
      - name: routing
        image: ratulb/routing:v2
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: routing-demo
    version: v2
  name: routing-demo
  namespace: istio-explorations
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: route-pod
