routing-2/destination-rules-lb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: routing-demo-dr
  namespace: istio-explorations
spec:
  host: routing-demo
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: RANDOM
