routing-2/virtual-service-traffic-split.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-routing-demo
  namespace: istio-explorations
spec:
  gateways:
  - gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /service1
    route:
    - destination:
        host: routing-demo
        subset: v1
      weight: 20
    - destination:
        host: routing-demo
        subset: v2
      weight: 80
  - match:
    - uri:
        exact: /service2
    route:
    - destination:
        host: routing-demo
        subset: v1
      weight: 20
    - destination:
        host: routing-demo
        subset: v2
      weight: 80
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: routing-demo
        subset: v1
      weight: 20
    - destination:
        host: routing-demo
        subset: v2
      weight: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: routing-demo
        subset: v1
      weight: 20
    - destination:
        host: routing-demo
        subset: v2
      weight: 80
